[tool.poetry]
name = "tuktuk"
version = "0.1.0"
description = ""
authors = ["Hannah Bacon hannah.bacon@hotmail.co.uk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
